# s15-21-t-python-react

./: README.md  package-lock.json
back/: .env.copy  .gitignore  Makefile  build.sh  db.sqlite3  documentation.md  manage.py  medical_hitories  pyproject.toml  pyvenv.cfg  readme.md  requirements.txt
back/abstracts/: models.py  serializers.py  userMood.py
back/api/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
back/api/migrations/: 0001_initial.py  0002_alter_apiuser_user_country.py  0002_apiuser_status.py  0002_remove_doc360user_name_doc360user_date_brith_and_more.py  0003_alter_apiuser_email.py  0004_apiuser_date_brith_alter_apiuser_email.py  0005_apiuser_id_nationality.py  0006_alter_apiuser_email_alter_apiuser_username.py  0007_alter_apiuser_username.py
back/api/templates/: test.html
back/catalogs/: admin.py  models.py  serializers.py  urls.py  views.py
back/catalogs/fixtures/: specialities.json
back/catalogs/migrations/: 0001_initial.py
back/comments/: models.py  serializer.py  urls.py  views.py
back/comments/migrations/: 0001_initial.py
back/documents/: models.py  serializers.py  urls.py  views.py
back/medical_history/: admin.py  apps.py  models.py  validators.py
back/medics_profile/: admin.py  apps.py  constants.py  models.py
back/salud360/: asgi.py  settings.py  urls.py  wsgi.py
back/speciality/: admin.py  models.py  serializers.py  urls.py  views.py
back/users_profile/: admin.py  apps.py  constants.py  models.py  signals.py  views.py
back/utils/: permissions.py
design/: readme.md
qa/: QA  (+1 more)
(+114 files in other folders)
